--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
@@ -14,7 +14,7 @@
       "Steps": [
         {
           "Name": "डेटा प्लेटफॉर्म में नामांकन करें",
-          "Text": "\\\"हमसे जुड़ें\\\" पर क्लिक करें और अपने नाम और ईमेल पते के साथ एक खाता बनाएँ। जैसे ही आप अपना खाता बना लेते हैं, तो आप एक संक्षिप्त प्रपत्र भर कर स्वयं (यदि आपको ए-टी है) को या अपने ए-टी से पीड़ित बच्चे(च्चों) को हमारे डेटा प्लेटफॉर्म में प्रतिभागियों के रूप में पंजीकृत कर पाएंगे।"
+          "Text": "\"हमसे जुड़ें\" पर क्लिक करें और अपने नाम और ईमेल पते के साथ एक खाता बनाएँ। जैसे ही आप अपना खाता बना लेते हैं, तो आप एक संक्षिप्त प्रपत्र भर कर स्वयं (यदि आपको ए-टी है) को या अपने ए-टी से पीड़ित बच्चे(च्चों) को हमारे डेटा प्लेटफॉर्म में प्रतिभागियों के रूप में पंजीकृत कर पाएंगे।"
         },
         {
           "Name": "हमें अनुमति दें",
