--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ja.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ja.json
@@ -14,7 +14,7 @@
       "Steps": [
         {
           "Name": "データプラットホームに登録する",
-          "Text": "\\\"参加する\\\" をクリックした後、あなたの名前とEメールアドレスを使用しアカウントを作成してください。アカウントが作成できたら、簡潔なフォームへの記入を行うことで、あなた自身 (A-T患者の場合) またはA-T患者であるお子様(たち) を参加者としてデータプラットフォームへ登録できます。"
+          "Text": "\"参加する\" をクリックした後、あなたの名前とEメールアドレスを使用しアカウントを作成してください。アカウントが作成できたら、簡潔なフォームへの記入を行うことで、あなた自身 (A-T患者の場合) またはA-T患者であるお子様(たち) を参加者としてデータプラットフォームへ登録できます。"
         },
         {
           "Name": "許可を与える",
