--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
@@ -14,7 +14,7 @@
       "Steps": [
         {
           "Name": "注册数据平台",
-          "Text": "点击 \\\"加入我们\\\" 并用您的姓名和电子邮箱地址创建一个帐户。 创建帐户后，您可以填写一份简短的表格，在自己的数据平台上注册自己（如果您有A-T）或您的孩子（A）作为参与者登录我们的数据平台。"
+          "Text": "点击 \"加入我们\" 并用您的姓名和电子邮箱地址创建一个帐户。 创建帐户后，您可以填写一份简短的表格，在自己的数据平台上注册自己（如果您有A-T）或您的孩子（A）作为参与者登录我们的数据平台。"
         },
         {
           "Name": "给我们许可",
