--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -101,7 +101,7 @@
         {
           "Question": "Will I receive my results?",
           "Paragraphs": [
-            "You will receive the research results of your viral test. These will be posted on your TestBoston.org dashboard every month within about 24-48 hours of your kit being sent back to us.  You will not receive the results of your antibody test. Results will inform public health decision-making. When results are reported, they will be released as a data summary noting basic demographic information. Your identity will remain private."
+            "You will receive the research results of your viral test. These will be posted on your TestBoston.org dashboard every month within about 24-48 hours of your kit being sent back to us. You will not receive the results of your antibody test. Results will inform public health decision-making. When results are reported, they will be released as a data summary noting basic demographic information. Your identity will remain private."
           ]
         },
         {
@@ -125,7 +125,7 @@
         {
           "Question": "Is it free to participate in TestBoston?",
           "Paragraphs": [
-            "Yes. There is no charge to participate in TestBoston.  We will pay for the kit, shipping costs and monthly testing--none of these services will be billed to your insurance."
+            "Yes. There is no charge to participate in TestBoston. We will pay for the kit, shipping costs and monthly testing--none of these services will be billed to your insurance."
           ]
         },
         {
@@ -137,7 +137,7 @@
         {
           "Question": "Can my family join TestBoston?",
           "Paragraphs": [
-            "Anyone interested in joining the study is asked to fill in a brief screening survey here.  Participants are randomly selected on an individual basis, which could mean that even if multiple family members from one household volunteer, only one person may be selected to participate."
+            "Anyone interested in joining the study is asked to fill in a brief screening survey <a class=\"Link Link_semi-bold\" href=\"https://rally.partners.org/study/testboston\" target=\"_blank\">here</a>. Participants are randomly selected on an individual basis, which could mean that even if multiple family members from one household volunteer, only one person may be selected to participate."
           ]
         },
         {
