atcp | update translations & show spinner on language change

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
@@ -551,7 +551,7 @@
     "Subtitle": "Countries represented"
   },
   "Survey": {
-    "Self": "Enrollment Process",
+    "Self": "{{ firstName }}'s Enrollment Process",
     "NewParticipant": "New Participant's Enrollment Process"
   },
   "Toolkit": {
